--- a/app/design/frontend/AHT/Lie_heroes/Magento_Directory/templates/currency.phtml
+++ b/app/design/frontend/AHT/Lie_heroes/Magento_Directory/templates/currency.phtml
@@ -20,7 +20,7 @@
     <div class="switcher currency switcher-currency" id="switcher-currency<?= $block->escapeHtmlAttr($id) ?>">
         <strong class="label switcher-label"><span><?= $block->escapeHtml(__('Currency')) ?></span></strong>
         <div class="actions dropdown options switcher-options">
-            <!-- <img class="image-option" id="AUS" src="pub/media/wysiwyg/lie_header/australia.png" alt="" style="display: block;"/>
+            <!--<img class="image-option" id="AUS" src="pub/media/wysiwyg/lie_header/australia.png" alt="" style="display:  none;"/>
             <img class="image-option" id="USD" src="pub/media/wysiwyg/lie_header/united-states-of-america.png" alt="" style="display: none;"/>
             <img class="image-option" id="VND" src="pub/media/wysiwyg/lie_header/vietnam.png" alt="" style="display: none;"/> -->
             <div class="action toggle switcher-trigger"
