--- a/app/design/frontend/AHT/Lie_heroes/Magento_Theme/web/css/source/_header.less
+++ b/app/design/frontend/AHT/Lie_heroes/Magento_Theme/web/css/source/_header.less
@@ -28,7 +28,7 @@
         padding: 0px 25px 1px 8px;
         color: #fff;
         vertical-align: baseline;
-        width: auto;
+        // width: auto;
     }
     .control {
         #search {
