--- a/pub/static/frontend/AHT/Lie_heroes/en_US/css/styles-m.css
+++ b/pub/static/frontend/AHT/Lie_heroes/en_US/css/styles-m.css
@@ -4036,6 +4036,10 @@ fieldset[disabled] .wishlist.split.button > .action {
 .form.send.friend .g-recaptcha {
   margin-top: 40px;
 }
+.block-bestseller-products .block-content .best-seller-qty img:hover {
+  transform: rotate3d(1, 1, 1, 90deg);
+  transition: all 1.5s;
+}
 /**
  * Copyright 2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.
  *
@@ -14925,7 +14929,6 @@ select {
   padding: 0px 25px 1px 8px;
   color: #fff;
   vertical-align: baseline;
-  width: auto;
 }
 .control #search {
   transition: width 0.6s, box-shadow 0.6s, border-radius 0.6s;
@@ -15286,6 +15289,7 @@ ul.links > li.authorization-link {
   width: 100%;
   margin-bottom: 0;
   padding: 0;
+  overflow: hidden;
 }
 .category-view ul a {
   position: relative;
@@ -15303,6 +15307,15 @@ ul.links > li.authorization-link {
   line-height: 32px;
   text-align: center;
   left: 22%;
+}
+.category-view ul .category-image img {
+  overflow: hidden;
+  transition: transform 1s;
+  height: 100%;
+  object-fit: cover;
+}
+.category-view ul .category-image:hover img {
+  transform: scale(1.1);
 }
 .category-view ul .category-image:nth-child(3) a .title-group {
   color: #47A6E0;
